# ModernPL

./: README.md  main.py  test_main.py
Calculator/: calc.go  calc_test.go  go.mod
FAPI/: pyproject.toml  readme.txt
Matrix/: matrix.go  matrix_test.go
TBot/: bot.go  go.mod
