[project]
name = "roadmapping"
version = "0.1.0"
description = "This porject for solving and learning RoadMap FastAPI"
authors = [
    {name = "Андрей Брюхин",email = "ADBryukhin@stud.kpfu.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "basemodel (>=20190604.1625,<20190605.0)",
    "uuid (>=1.30,<2.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "tortoise (>=0.1.1,<0.2.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"

